--- a/kubernetes-dashboard-amd64/Dockerfile
+++ b/kubernetes-dashboard-amd64/Dockerfile
@@ -1,1 +1,2 @@
-FROM gcr.io/google_containers/kubernetes-dashboard-amd64:1.7.1
+FROM gcr.io/google_containers/kubernetes-dashboard-amd64:v1.7.1
+MAINTAINER zgb <312768277@qq.com>
