--- a/fluentd/Dockerfile
+++ b/fluentd/Dockerfile
@@ -1,2 +1,2 @@
-FROM k8s.gcr.io/fluentd-elasticsearch:v2.0.2
+FROM gcr.io/google_containers/fluentd-elasticsearch:1.23
 MAINTAINER zgb <312768277@qq.com>
